--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,3 +19,16 @@ jobs:
         timeout-minutes: 1
         env:
           FORCE_COLOR: 3
+
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+      - run: npm i
+      - run: npm run coverage
+        timeout-minutes: 1
+        env:
+          FORCE_COLOR: 3
