--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "scripts": {
     "fmt": "prettier --write src",
     "fmt:check": "prettier --check src",
-    "build": "tsc",
+    "build": "npm run build:tsc && npm run build:esbuild",
+    "build:tsc": "tsc",
+    "build:esbuild": "esbuild build/maml.js --bundle --outfile=maml.min.js --platform=neutral --target=node20 --minify-whitespace",
     "test": "npm run build && vitest",
     "coverage": "npm run build && vitest run --coverage"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.2.4",
+    "esbuild": "^0.25.10",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
