--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fmt:check": "prettier --check src",
     "build": "npm run build:tsc && npm run build:esbuild",
     "build:tsc": "tsc",
-    "build:esbuild": "esbuild build/maml.js --bundle --outfile=maml.min.js --platform=neutral --target=node20 --minify-whitespace",
+    "build:esbuild": "esbuild build/maml.js --bundle --outfile=maml.min.js --platform=neutral --target=node20 --minify-whitespace --minify-identifiers --minify-syntax",
     "test": "npm run build && vitest",
     "coverage": "npm run build && vitest run --coverage"
   },
