--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "build:tsc": "tsc",
     "build:esbuild": "esbuild build/maml.js --bundle --outfile=maml.min.js --platform=neutral --target=node20 --minify-whitespace --minify-identifiers --minify-syntax",
     "test": "npm run build && vitest",
+    "test:bench":"vitest bench test/maml.bench.js",
     "coverage": "npm run build && vitest run --coverage"
   },
   "devDependencies": {
+    "@iarna/toml": "^2.2.5",
     "@vitest/coverage-v8": "^3.2.4",
     "esbuild": "^0.25.10",
+    "ini": "^5.0.0",
     "prettier": "^3.6.2",
+    "toml": "^3.0.0",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "yaml": "^2.8.1"
   },
   "prettier": {
     "semi": false,
