ci: separate build flows

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,31 +3,80 @@ name: test
 on: [push, pull_request]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
+      - name: Use Node.js 24
+        uses: actions/setup-node@v5
+        with:
+          node-version: 24
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: |
+            build
+            package.json
+          retention-days: 1
+
   test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+        with:
+          persist-credentials: false
+      - name: Setup Node.js
+        uses: actions/setup-node@v5
+        with:
+          node-version: 24
+          cache: 'npm'
+      - uses: actions/download-artifact@v5
+        with:
+          name: build
+      - name: Fetch deps
+        run: npm ci
+      - name: Run tests
+        run: npm run test
+
+  smoke-matrix:
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [6, 12, 18, 20, 24]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm i
-      - run: npm test
-        timeout-minutes: 1
-        env:
-          FORCE_COLOR: 3
+      - uses: actions/download-artifact@v5
+        with:
+          name: build
+
+      - run: node smoke/maml.smoke.cjs
+      - if: ${{ matrix.node-version >= 12}}
+        run: npm smoke/maml.smoke.mjs
 
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v4
         with:
-          node-version: 22.x
-      - run: npm i
+          node-version: 24
+      - run: npm ci
       - run: npm run coverage
         timeout-minutes: 1
         env:
