--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,8 @@ name: test
 
 on: [push, pull_request]
 
+permissions: {}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -43,10 +45,11 @@ jobs:
       - name: Fetch deps
         run: npm ci
       - name: Run tests
-        run: npm run test
+        run: npm run coverage
 
-  smoke-matrix:
+  smoke-node:
     needs: build
+    name: smoke-node-${{ matrix.node-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -63,21 +66,46 @@ jobs:
         with:
           name: build
 
-      - run: node smoke/maml.smoke.cjs
+      - run: npm run smoke:cjs
       - if: ${{ matrix.node-version >= 12}}
-        run: npm smoke/maml.smoke.mjs
+        run: npm run smoke:esm
 
-  coverage:
+  smoke-bun:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v5
         with:
           persist-credentials: false
-      - uses: actions/setup-node@v4
+
+      - name: Setup Bun
+        uses: antongolub/action-setup-bun@f0b9f339a7ce9ba1174a58484e4dc9bbd6f7b133 # v1.13.2
+      - uses: actions/download-artifact@v5
         with:
-          node-version: 24
-      - run: npm ci
-      - run: npm run coverage
-        timeout-minutes: 1
-        env:
-          FORCE_COLOR: 3
+          name: build
+      - run: |
+          bun ./smoke/maml.smoke.mjs
+          bun ./smoke/maml.smoke.cjs
+
+  smoke-deno:
+    runs-on: ubuntu-latest
+    needs: build
+    name: smoke-deno${{ matrix.deno-version }}
+    strategy:
+      matrix:
+        deno-version: [1, 2]
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
+      - name: Setup Deno
+        uses: denoland/setup-deno@909cc5acb0fdd60627fb858598759246509fa755 # v2.0.2
+        with:
+          deno-version: ${{ matrix.deno-version }}
+      - run: deno install npm:types/node npm:types/fs-extra
+      - uses: actions/download-artifact@v5
+        with:
+          name: build
+      - run: |
+          deno ./smoke/maml.smoke.mjs
+          deno ./smoke/maml.smoke.cjs
