--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "files": [
-    "build"
+    "build/index.js",
+    "build/*.d.ts"
   ],
   "engines": {
     "node": ">=12"
@@ -14,18 +15,23 @@
   "scripts": {
     "fmt": "prettier --write src",
     "fmt:check": "prettier --check src",
-    "build": "npm run build:tsc && npm run build:min",
+    "build": "concurrently 'npm:build:*'",
     "build:tsc": "tsc --emitDeclarationOnly",
-    "build:cjs": "esbuild src/index.ts --sourcemap --bundle --outfile=build/index.cjs --platform=neutral --target=node6 --minify-syntax",
-    "build:esm": "",
+    "build:pkgjson": "node scripts/build-pkgjson.js",
+    "build:esm": "esbuild src/index.ts --format=esm --sourcemap --bundle --outfile=build/index.js --platform=neutral --target=node12 --minify-syntax",
+    "build:cjs": "esbuild src/index.ts --format=cjs --sourcemap --bundle --outfile=build/index.cjs --platform=neutral --target=node6 --minify-syntax",
     "build:min": "esbuild src/maml.ts --sourcemap --bundle --outfile=build/maml.min.js --platform=neutral --target=node6 --minify-whitespace --minify-identifiers --minify-syntax",
     "test": "npm run build && vitest",
-    "test:bench":"vitest bench test/maml.bench.js",
+    "test:bench": "vitest bench test/maml.bench.js",
+    "test:workflow": "zizmor .github/workflows -v -p --min-severity=medium",
+    "smoke:cjs": "node smoke/maml.smoke.cjs",
+    "smoke:esm": "node smoke/maml.smoke.esm",
     "coverage": "npm run build && vitest run --coverage"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
     "@vitest/coverage-v8": "^3.2.4",
+    "concurrently": "^9.2.1",
     "esbuild": "^0.25.10",
     "ini": "^5.0.0",
     "prettier": "^3.6.2",
