test: check size limit

--- a/package.json
+++ b/package.json
@@ -30,19 +30,23 @@
     "build:cjs": "esbuild src/index.ts --format=cjs --sourcemap --bundle --outfile=build/index.cjs --platform=neutral --target=node6 --minify-syntax",
     "build:min": "esbuild src/maml.ts --sourcemap --bundle --outfile=build/maml.min.js --platform=neutral --target=node6 --minify-whitespace --minify-identifiers --minify-syntax",
     "test": "npm run build && vitest",
+    "test:unit": "vitest run",
     "test:bench": "vitest bench test/maml.bench.js",
     "test:workflow": "zizmor .github/workflows -v -p --min-severity=medium",
+    "test:size": "size-limit",
     "smoke:cjs": "node smoke/maml.smoke.cjs",
     "smoke:esm": "node smoke/maml.smoke.mjs",
     "coverage": "npm run build && vitest run --coverage"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
+    "@size-limit/file": "^11.2.0",
     "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "^9.2.1",
     "esbuild": "^0.25.10",
     "ini": "^5.0.0",
     "prettier": "^3.6.2",
+    "size-limit": "^11.2.0",
     "toml": "^3.0.0",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
