docs: attach `BENCHMARKS.md`

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "build:esm": "esbuild src/index.ts --format=esm --sourcemap --bundle --outfile=build/index.js --platform=neutral --target=node12 --minify-syntax",
     "build:cjs": "esbuild src/index.ts --format=cjs --sourcemap --bundle --outfile=build/index.cjs --platform=neutral --target=node6 --minify-syntax",
     "build:min": "esbuild src/maml.ts --sourcemap --bundle --outfile=build/maml.min.js --platform=neutral --target=node6 --minify-whitespace --minify-identifiers --minify-syntax",
+    "docs:bench": "node scripts/build-bench-md.ts",
     "test": "npm run build && vitest",
     "test:unit": "vitest run",
     "test:bench": "vitest bench test/maml.bench.js",
@@ -41,12 +42,17 @@
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
     "@size-limit/file": "^11.2.0",
+    "@types/ini": "^4.1.1",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^24.6.2",
     "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "^9.2.1",
     "esbuild": "^0.25.10",
     "ini": "^5.0.0",
+    "js-yaml": "^4.1.0",
     "prettier": "^3.6.2",
     "size-limit": "^11.2.0",
+    "tinybench": "^5.0.1",
     "toml": "^3.0.0",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
