--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "toml": "^3.0.0",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
-    "yaml": "^2.8.1"
+    "yaml": "^2.8.1",
+    "yaml-js": "^0.3.1"
   },
   "prettier": {
     "semi": false,
