--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build:pkgjson": "node scripts/build-pkgjson.js",
     "build:esm": "esbuild src/index.ts --format=esm --sourcemap --bundle --outfile=build/index.js --platform=neutral --target=node12 --minify-syntax",
     "build:cjs": "esbuild src/index.ts --format=cjs --sourcemap --bundle --outfile=build/index.cjs --platform=neutral --target=node6 --minify-syntax",
-    "build:min": "esbuild src/maml.ts --sourcemap --bundle --outfile=build/maml.min.js --platform=neutral --target=node6 --minify-whitespace --minify-identifiers --minify-syntax",
+    "build:min": "esbuild src/maml.ts --bundle --outfile=build/maml.min.js --platform=neutral --target=node6 --minify-whitespace --minify-identifiers --minify-syntax",
     "docs:bench": "node scripts/build-bench-md.ts",
     "test": "npm run build && vitest",
     "test:unit": "vitest run",
